--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
 
     <div class="message">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga officiis facilis sapiente nisi, nam similique blanditiis facere eaque deleniti debitis asperiores sequi obcaecati! Debitis optio nulla magnam! Assumenda, nemo voluptatibus.
+            My dearest hubby, I crafted a simple webpage with all my heart, just for you. Considering we are in a long distance relationship, there are only limited things I could do to express my love for you. 
         </p>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga officiis facilis sapiente nisi, nam similique blanditiis facere eaque deleniti debitis asperiores sequi obcaecati! Debitis optio nulla magnam! Assumenda, nemo voluptatibus.
+            In this vast digital world, I wanted something uniquely yours. Despite the challenges of our long-distance relationship, I pondered numerous ways to show my affection. In the end, I considered virtual gifts and even contemplated transferring money via GCash – a thought that made me chuckle. Yet, amidst all these thoughts, the first thing that truly felt right was crafting a love message just for you and create this webpage, using my own knowledge and effort into it. 
+        </p>
+        <p>
+            Happy 1st Monthsary, my amazing hubby! The reality of us being a couple still feels like a dream. Meeting you through MLBB and realizing the 'Partner Affinity' was more than just a game mechanic – it became our reality. Labels aside, we've always behaved as if we were in a relationship, sharing countless precious moments. In this month, we've experienced the natural ebb and flow of any relationship. Despite a few disagreements, we learned, forgave, and emerged as better partners.
+        </p>
+        <p>
+            I want to express my sincere apologies for any unintentional hurt and appreciate your understanding through my moments of messiness. Thank you for your continuous efforts to be the best partner for me, for carrying me in games, and for just being you. I'm genuinely happy to call you my boyfriend. Let's navigate through life together; I envision a future where I walk down the aisle, and your face awaits me at the altar. I look forward to a lifetime together. I want you to be my last. Mahal na mahal po kita, my love.♡
         </p>
     </div>
     </div> 
